Job search panel update

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
 /* custom list icon */
 .custom-list-icon {
-  background-image: url("src/assets/TickIcon.svg");
+  background-image: url(/public/assets/TickIcon.svg);
   background-size: 1.5rem;
   background-repeat: no-repeat;
   padding-left: 2rem;
+}
+
+.jb-img{
+  background-image: url(/public/assets/Jobsearch.png);
+  background-size: cover;
+  background-position: center;
 }
