Blog page update

--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,9 @@
   background-size: cover;
   background-position: center;
 }
+
+.blogimg{
+  background-image: url(/public/assets/blog-image.png);
+  background-size: cover;
+  background-position: center;
+}
