--- a/src/App.css
+++ b/src/App.css
@@ -6,14 +6,100 @@
   padding-left: 2rem;
 }
 
-.jb-img{
+.jb-img {
   background-image: url(/public/assets/Jobsearch.png);
   background-size: cover;
   background-position: center;
 }
 
-.blogimg{
+.blogimg {
   background-image: url(/public/assets/blog-image.png);
   background-size: cover;
   background-position: center;
+}
+
+.dashed-before {
+  width: 156px;
+  height: 1px;
+  border-bottom: 2px solid #424242;
+  margin: 20px 0;
+  position: relative;
+}
+
+.dashed-before::before {
+  content: "";
+  position: absolute;
+  left: -60px;
+  top: 0;
+  width: 53px; /* Adjust width to control length of dashed line */
+  height: 1px;
+  border-bottom: 2px dashed #424242;
+}
+
+.dashed-after {
+  width: 156px;
+  height: 1px;
+  border-bottom: 2px solid #424242;
+  margin: 20px 0;
+  position: relative;
+}
+
+.dashed-after::after {
+  content: "";
+  position: absolute;
+  right: -60px;
+  top: 0;
+  width: 53px; /* Adjust width to control length of dashed line */
+  height: 1px;
+  border-bottom: 2px dashed #424242;
+}
+
+.su-img {
+  background-image: url(/assets/SignInImage1.png);
+  background-size: cover;
+  background-position: center;
+}
+
+@media only screen and (max-width: 768px) {
+  .su-img {
+    background-image: url(/assets/SignInImage.png);
+    background-size: cover;
+    background-position: center;
+  }
+
+  .dashed-before {
+    width: 79.08px;
+    height: 1px;
+    border-bottom: 2px solid #424242;
+    margin: 20px 0;
+    position: relative;
+  }
+
+  .dashed-before::before {
+    content: "";
+    position: absolute;
+    left: -35px;
+    top: 0;
+    width: 26.87px; /* Adjust width to control length of dashed line */
+    height: 1px;
+    border-bottom: 2px dashed #424242;
+  }
+
+  .dashed-after {
+    width: 79.08px;
+    height: 1px;
+    border-bottom: 2px solid #424242;
+    margin: 20px 0;
+    position: relative;
+  }
+
+  .dashed-after::after {
+    content: "";
+    position: absolute;
+    right: -35px;
+    top: 0;
+    width: 26.87px; /* Adjust width to control length of dashed line */
+    height: 1px;
+    border-bottom: 2px dashed #424242;
+  }
 }
